examples/test/testpolicy17948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17948
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key21: value47
      key17: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value7
          key23: value7
          key37: value1
      podSelector:
        matchLabels:
          key13: value15
          key25: value10
